--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -13,12 +13,14 @@ tasks:
       - go test ./...
     sources:
       - "**/*.go"
+      - "**/package.json"
 
   test-cov:
     cmds:
       - go test -cover ./...
     sources:
       - "**/*.go"
+      - "**/package.json"
 
   test-cov-html:
     cmds:
@@ -26,3 +28,4 @@ tasks:
       - go tool cover -html=./coverage.out -o ./coverage.html
     sources:
       - "**/*.go"
+      - "**/package.json"
